--- a/jars/jars.toml
+++ b/jars/jars.toml
@@ -48,6 +48,7 @@ worldguard     = '{host:bukkit}/projects/worldguard/files/{build}/download'
 
 # Base target definition from Minecraft servers.
 [jars.packages.proxy.1_20_1]
+service = "velocity"
 depends = [
     { name = 'velocity', version = '3.2.0-SNAPSHOT', build = '263', service = "velocity" },
     { name = 'geyser', version = 'latest', build= 'latest' },
@@ -55,6 +56,7 @@ depends = [
 ]
 
 [jars.packages.server.1_20_1]
+service = "paper"
 depends = [
     { name = 'paper-mc', version = '1.20.1', build = '128', service = "paper" },
     { name = 'essentialsx*', version = '2.20.1'},
@@ -74,3 +76,12 @@ depends = [
     { name = 'silkspawners', version = 'silkspawners-7.5.0' },
     { name = 'chestshop', version = '3.12.2' }
 ]
+
+[jars.packages.aabernathy]
+from = 'jars.packages.proxy_0'
+
+[jars.packages.test]
+from = 'jars.packages.survival_0'
+
+[jars.packages.faerun]
+from = 'jars.packages.survival_0'
